<resources>
    <string name="app_name">BrockApp</string>

    <string name="text_blank"> </string>

    <string name="main_message">Corri con RUNIBO</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="login_button">LOGIN</string>
    <string name="google_button">ACCEDI CON GOOGLE</string>
    <string name="web_view_button">REPOSITORY</string>

    <string name="authenticator_username">Username</string>
    <string name="authenticator_password">Password</string>

    <string name="login_welcome_text_view">Login</string>
    <string name="message_to_signin">Non hai un account?</string>
    <string name="on_click_signin">Clicca qui!</string>

    <string name="signin_welcome_text_view">Sign In</string>
    <string name="message_to_login">Hai già un account?</string>
    <string name="on_click_login">Clicca qui!</string>

    <string name="description_error_signin">CREDENZIALI GIA\' PRESENTI. UTILIZZA UN ALTRO USERNAME E PASSWORD</string>
    <string name="description_error_login">CREDENZIALI ERRATE. SEI SICURO DI ESSERE GIÀ ISCRITTO ALL\'APPLICAZIONE?</string>

    <string name="permission_title">Permesso richiesto</string>
    <string name="permission_message">Concedi il permesso dei tuoi spostamenti per usufruire di tutte le funzionalità.</string>
    <string name="permission_positive_button">Concedi</string>
    <string name="settings_positive_button">Concedi</string>
    <string name="permission_negative_button">Annulla</string>
    <string name="permission_setting_button">Settings</string>
    <string name="permission_background">Concedi il permesso di accedere alla tua posizione anche quando l\'app è in background per garantire il corretto funzionamento di tutte le funzionalità.</string>
    <string name="permission_notification">Concedi il permesso di inviarti notifiche per tenerti aggiornato e garantire il corretto funzionamento di tutte le funzionalità dell\'app.</string>
    <string name="permission_recognition">Concedi il permesso di monitorare le tue attività anche quando l\'app è in background.</string>
    <string name="permission_share_data">Concedi il permesso di condividere i dati registrati per migliorare l\'esperienza offerta dall\'app.</string>
    <string name="permissions_location">Concedi il permesso di accedere alla tua posizione per garantire il corretto funzionamento di tutte le funzionalità dell\'app.</string>
    <string name="permissions_title">Permessi richiesti</string>
    <string name="permissions_message">Per migliorare la tua esperienza, l\'app ha bisogno di accedere a tutte le funzionalità richieste.</string>

    <string name="menu_activity">Calendar</string>
    <string name="menu_map">Map</string>
    <string name="menu_you">You</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_register">Register</string>
    <string name="item_more_info">Info</string>
    <string name="item_more_logout">Logout</string>
    <string name="item_more_delete">Delete account</string>

    <string name="title_home_fragment">In primo piano</string>
    <string name="title_spinner">Visualizza per</string>
    <string name="subtitle_activities">Le tue ultime attività</string>
    <string name="subtitle_features">Le funzionalità dell\'app</string>
    <string name="register_text_view">REGISTRAZIONE</string>
    <string name="calendar_text_view">CALENDARIO</string>
    <string name="friends_text_view">AMICI</string>
    <string name="charts_text_view">GRAFICI</string>
    <string name="spinner_prompt">Visualizza per</string>

    <string name="description_back_month_button">Back arrow</string>
    <string name="description_forward_month_button">Forward arrow</string>
    <string name="monday_text_view">MON</string>
    <string name="thursday_text_view">THU</string>
    <string name="wednesday_text_view">WES</string>
    <string name="tuesday_text_view">TUE</string>
    <string name="friday_text_view">FRI</string>
    <string name="saturday_text_view">SAT</string>
    <string name="sunday_text_view">SUN</string>

    <string name="empty_icon_description">Icona per empty page</string>

    <string name="title_new_activity">Seleziona una delle seguenti attività</string>
    <string name="title_still">Attività sedentaria</string>
    <string name="description_still_icon">Chair icon</string>
    <string name="title_vehicle">Viaggio in macchina</string>
    <string name="description_vehicle_icon">Vehicle icon</string>
    <string name="title_walk">Camminata</string>
    <string name="description_walk_icon">Walking icon</string>

    <string name="stop_button">STOP</string>
    <string name="start_button">START</string>

    <string name="description_icon_activity">Activity icon</string>

    <string name="charts_step_count_text">Numero di passi giornaliero</string>
    <string name="charts_distance_travelled_text">Distanza percorsa giornaliera</string>
    <string name="charts_pie_chart_text">Suddivisione delle attività nel mese</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_text">Le tue attività</string>
    <string name="historical_main_text">Il tuo storico</string>
    <string name="calendar_main_text">Il tuo calendario</string>
    <string name="charts_main_text">I tuoi grafici</string>
    <string name="friends_main_text">I tuoi amici</string>

    <string name="vehicle_distance_travelled">Distanza percorsa</string>
    <string name="initial_distance_travelled">0 metri</string>

    <string name="account_text_view">Account</string>
    <string name="description_icon_account">Account icon</string>
    <string name="logout_text_view">Logout</string>
    <string name="description_icon_logout">Logout icon</string>
    <string name="dangerous_text_view">Zona pericolosa</string>
    <string name="description_icon_dangerous">Dangerous icon</string>
    <string name="dangerous_dialog_title">Attenzione</string>
    <string name="dangerous_dialog_message">Se cliccherai su ELIMINA perderai il tuo account e tutti i dati associati.</string>
    <string name="dangerous_positive_button">Elimina</string>
    <string name="dangerous_negative_button">Annulla</string>

    <string name="username_account_dialog">Username:</string>
    <string name="password_account_dialog">Password:</string>
    <string name="locality_marker_dialog">Località:</string>
    <string name="longitude_marker_dialog">Longitudine:</string>
    <string name="latitude_marker_dialog">Latitudine:</string>
    <string name="exit_dialog_button">ESCI</string>
    <string name="add_friend_dialog_button">AGGIUNGI</string>
    <string name="delete_marker_button">ELIMINA</string>

    <string name="distance_label">Distanza:</string>
    <string name="insert_username_text">Inserisci lo username:</string>
    <string name="insert_password_text">Inserisci la password:</string>
    <string name="daily_static_text">Durata delle attività statiche di oggi</string>
    <string name="weekly_static_text">Durata della attività statiche nella settimana</string>
    <string name="daily_static_counter_home_text">0/24 ore</string>
    <string name="weekly_static_counter_home_text">0/168 ore</string>
    <string name="static_count_text">Il tempo speso:</string>
    <string name="static_count_initial_value">0</string>
    <string name="daily_kilometers_text">Chilometri accumulati oggi</string>
    <string name="weekly_kilometers_text">Chilometri accumulati nella settimana</string>
    <string name="daily_kilometers_counter_home_text">0/100 km</string>
    <string name="weekly_kilometers_counter_home_text">0/700 km</string>
    <string name="kilometers_count_text">Chilometri fatti:</string>
    <string name="kilometers_count_initial_value">0</string>
    <string name="daily_step_text">Passi effettuati oggi</string>
    <string name="weekly_step_text">Passi effettuati nella settimana</string>
    <string name="daily_step_counter_home_text">0/10000 passi</string>
    <string name="weekly_step_counter_home_text">0/70000 passi</string>
    <string name="step_count_text">Passi fatti:</string>
    <string name="step_count_initial_value">0</string>
    <string name="walk_title">CAMMINATA</string>
    <string name="vehicle_title">VIAGGIO IN MACCHINA</string>
    <string name="still_title">ATTIVITÀ SEDENTARIA</string>

    <string name="description_icon_add">Icona add per aggiungere area di geofence</string>
    <string name="edit_text_map_fragment">Cerca una nuova area</string>
    <string name="settings_icon_description">Icona del bottone per accedere ai settings</string>
    <string name="new_activity_icon_description">Icona per registrare una nuova attività</string>
    <string name="new_user_activity_text">Scegli il tipo di attività da registrare:</string>

    <string name="search_friends_icon">Icona per cercare utenti sulla piattaforma</string>
    <string name="friends_synchronized_icon_description">Icona per sincronizzare i dati</string>
    <string name="title_friends">I tuoi amici</string>
    <string name="title_suggestion">Suggerimenti</string>
    <string name="search_user_text">Cerca un utente</string>
    <string name="button_view">Mostra</string>
    <string name="button_follow">Segui</string>
    <string name="search_user_button">Cerca</string>
    <string name="friend_data_text_view">Attività dell\'utente</string>
    <string name="height_difference_text">Dislivello:</string>
    <string name="select_from_memo">SELECT * FROM Memo</string>

    <string-array name="spinner_items">
        <item>Giorno</item>
        <item>Settimana</item>
    </string-array>

    <string-array name="spinner_bar_chart_items">
        <item>Vehicle</item>
        <item>Walk</item>
    </string-array>

    <string-array name="spinner_activity">
        <item>Still</item>
        <item>Vehicle</item>
        <item>Walk</item>
        <item>All</item>
    </string-array>

    <string-array name="spinner_pie_chart_items">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
</resources>