<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <TextView
            android:textAlignment="center"
            android:text="@string/main_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:textColor="@color/white"
            android:background="@color/uni_red"
            android:textSize="20sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp" >

        <Button
            android:id="@+id/button_sign_in"
            android:text="@string/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/uni_red" />

        <Button
            android:id="@+id/button_login"
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/uni_red" />

        <Button
            android:id="@+id/button_google"
            android:text="@string/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/uni_red" />

        <Button
            android:id="@+id/button_web_view"
            android:text="@string/web_view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/uni_red" />

    </LinearLayout>

</LinearLayout>