<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_margin="10dp"
    android:padding="16dp"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_title"
        android:layout_marginTop="50dp"
        android:textSize="20sp" />

    <Chronometer
        android:id="@+id/walk_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/step_count_text"
            android:text="@string/step_count_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/step_count"
            android:text="@string/step_count_initial_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/walk_button_stop"
            android:text="@string/stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@color/uni_red" />

        <Button
            android:id="@+id/walk_button_start"
            android:text="@string/start_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@color/uni_red" />
    </GridLayout>
</LinearLayout>
