<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/text_username"
            android:inputType="text"
            android:hint="@string/authenticator_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="10"
            android:backgroundTint="@color/uni_red" />

        <EditText
            android:id="@+id/text_password"
            android:inputType="textPassword"
            android:hint="@string/authenticator_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="10"
            android:backgroundTint="@color/uni_red" />

        <Button
            android:id="@+id/button_login"
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/uni_red" />

        <TextView
            android:id="@+id/text_login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:textSize="16sp"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>